git-svn-id: http://django-reversion.googlecode.com/svn/trunk@9 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/reversion/templates/reversion/object_history.html
+++ b/reversion/templates/reversion/object_history.html
@@ -16,11 +16,11 @@
 			        </thead>
 			        <tbody>
 				        {% for action in action_list %}
-				        <tr>
-				            <th scope="row">{{action.date_created|date:_("DATETIME_FORMAT")}}</th>
-				            <td>{{action.user.username}}{% if action.user.first_name %} ({{action.user.first_name}} {{action.user.last_name}}){% endif %}</td>
-				            <td>{{action.comment}}</td>
-				        </tr>
+					        <tr>
+					            <th scope="row"><a href="./{{action.pk}}/">{{action.date_created|date:_("DATETIME_FORMAT")}}</a></th>
+					            <td>{{action.user.username}}{% if action.user.first_name %} ({{action.user.first_name}} {{action.user.last_name}}){% endif %}</td>
+					            <td>{{action.comment}}</td>
+					        </tr>
 				        {% endfor %}
 			        </tbody>
 			    </table>
