--- a/reversion/templates/reversion/revision_form.html
+++ b/reversion/templates/reversion/revision_form.html
@@ -1,4 +1,17 @@
 {% extends "admin/change_form.html" %}
+{% load i18n %}
+
+
+{% block breadcrumbs %}
+	<div class="breadcrumbs">
+		<a href="../../../../../">{% trans "Home" %}</a> &rsaquo;
+		<a href="../../../../">{{app_label|capfirst|escape}}</a> &rsaquo; 
+		<a href="../../../">{{opts.verbose_name_plural|capfirst}}</a> &rsaquo;
+		<a href="../../">{{original|truncatewords:"18"}}</a> &rsaquo;
+		<a href="../">{% trans "History" %}</a> &rsaquo;
+		{% blocktrans with opts.verbose_name as verbose_name %}Revert {{verbose_name}}{% endblocktrans %}
+	</div>
+{% endblock %}
 
 
 {% block content %}
