Admin now shows changes to formsets.
git-svn-id: http://django-reversion.googlecode.com/svn/trunk@14 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/reversion/templates/reversion/object_history.html
+++ b/reversion/templates/reversion/object_history.html
@@ -17,9 +17,9 @@
 			        <tbody>
 				        {% for action in action_list %}
 					        <tr>
-					            <th scope="row"><a href="./{{action.pk}}/">{{action.date_created|date:_("DATETIME_FORMAT")}}</a></th>
+					            <th scope="row"><a href="./{{action.pk}}/">{{action.action_time|date:_("DATETIME_FORMAT")}}</a></th>
 					            <td>{{action.user.username}}{% if action.user.first_name %} ({{action.user.first_name}} {{action.user.last_name}}){% endif %}</td>
-					            <td>{{action.comment}}</td>
+					            <td>{{action.change_message}}</td>
 					        </tr>
 				        {% endfor %}
 			        </tbody>
