git-svn-id: http://django-reversion.googlecode.com/svn/trunk@29 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/object_history.html
+++ b/src/reversion/templates/reversion/object_history.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 	<div id="content-main">
+	
+		<p>{% blocktrans %}Choose a date from the list below to revert to a previous version of this object.{% endblocktrans %}</p>
+	
 		<div class="module">
 			{% if action_list %}
 			    <table id="change-history">
