--- a/src/reversion/templates/reversion/recover_list.html
+++ b/src/reversion/templates/reversion/recover_list.html
@@ -12,6 +12,7 @@
 
 {% block content %}
 	<div id="content-main">
+		<p>{% blocktrans %}Choose a date from the list below to recover a deleted version of an object.{% endblocktrans %}</p>
 		<div class="module">
 			{% if deleted %}
 			    <table id="change-history">
