--- a/src/reversion/templates/reversion/revision_form.html
+++ b/src/reversion/templates/reversion/revision_form.html
@@ -19,3 +19,8 @@
 		{{block.super}}
 	{% endwith %}
 {% endblock %}
+
+
+{% block form_top %}
+	<p>{% blocktrans %}Press the save button below to revert to this version of the object.{% endblocktrans %}</p>
+{% endblock %}
