git-svn-id: http://django-reversion.googlecode.com/svn/trunk@56 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/recover_list.html
+++ b/src/reversion/templates/reversion/recover_list.html
@@ -20,15 +20,13 @@
 			        <tr>
 			            <th scope="col">{% trans 'Date/time' %}</th>
 			            <th scope="col">{{opts.verbose_name|capfirst}}</th>
-			            <th scope="col">{% trans 'User' %}</th>
 			        </tr>
 			        </thead>
 			        <tbody>
 			        {% for deletion in deleted %}
 			        <tr>
-			            <th scope="row"><a href="{{deletion.pk}}/">{{deletion.action_time|date:_("DATETIME_FORMAT")}}</a></th>
-			            <td>{{deletion.object_repr}}</td>
-			            <td>{{deletion.user.username}}{% if deletion.user.first_name %} ({{deletion.user.first_name}} {{deletion.user.last_name}}){% endif %}</td>
+			            <th scope="row"><a href="{{deletion.pk}}/">{{deletion.date_created|date:_("DATETIME_FORMAT")}}</a></th>
+			            <td>{{deletion.object_version.object}}</td>
 			        </tr>
 			        {% endfor %}
 			        </tbody>
