--- a/src/reversion/templates/reversion/recover_form.html
+++ b/src/reversion/templates/reversion/recover_form.html
@@ -2,6 +2,13 @@
 {% load i18n %}
 
 
+{% block extrahead %}
+    {{block.super.super.super}}
+    <script type="text/javascript" src="../../../../jsi18n/"></script>
+    {{media}}
+{% endblock %}
+
+
 {% block breadcrumbs %}
 	<div class="breadcrumbs">
 		<a href="../../../../">{% trans "Home" %}</a> &rsaquo;
