--- a/src/reversion/templates/reversion/recover_list.html
+++ b/src/reversion/templates/reversion/recover_list.html
@@ -25,7 +25,7 @@
 			        <tbody>
 			        {% for deletion in deleted %}
 			        <tr>
-			            <th scope="row"><a href="{{deletion.pk}}/">{{deletion.date_created|date:_("DATETIME_FORMAT")}}</a></th>
+			            <th scope="row"><a href="{{deletion.pk}}/">{{deletion.revision.date_created|date:_("DATETIME_FORMAT")}}</a></th>
 			            <td>{{deletion.object_version.object}}</td>
 			        </tr>
 			        {% endfor %}
