git-svn-id: http://django-reversion.googlecode.com/svn/trunk@134 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/recover_list.html
+++ b/src/reversion/templates/reversion/recover_list.html
@@ -26,7 +26,7 @@
 			        {% for deletion in deleted %}
 			        <tr>
 			            <th scope="row"><a href="{{deletion.pk}}/">{{deletion.revision.date_created|date:_("DATETIME_FORMAT")}}</a></th>
-			            <td>{{deletion.object_version.object}}</td>
+			            <td>{{deletion.object_repr}}</td>
 			        </tr>
 			        {% endfor %}
 			        </tbody>
