--- a/src/reversion/templates/reversion/recover_form.html
+++ b/src/reversion/templates/reversion/recover_form.html
@@ -15,7 +15,7 @@
 		<a href="../../../">{{app_label|capfirst|escape}}</a> &rsaquo; 
 		<a href="../../">{{opts.verbose_name_plural|capfirst}}</a> &rsaquo;
 		<a href="../">{% blocktrans with opts.verbose_name as verbose_name %}Recover deleted {{verbose_name}}{% endblocktrans %}</a> &rsaquo;
-		{% blocktrans with original|truncatewords:18 as name %}Recover {{name}}{% endblocktrans %}
+		{{title}}
 	</div>
 {% endblock %}
 
