Switched to exclusive use of url confs in VersionAdmin and templates.
git-svn-id: http://django-reversion.googlecode.com/svn/trunk@223 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/recover_list.html
+++ b/src/reversion/templates/reversion/recover_list.html
@@ -4,9 +4,9 @@
 
 {% block breadcrumbs %}
     <div class="breadcrumbs">
-        <a href="../../../">{% trans 'Home' %}</a> &rsaquo; 
-        <a href="../../">{{app_label|capfirst|escape}}</a> &rsaquo; 
-        <a href="../">{{module_name}}</a> &rsaquo; 
+        <a href="{% url admin:index %}">{% trans 'Home' %}</a> &rsaquo; 
+        <a href="{% url admin:app_list app_label %}">{{app_label|capfirst|escape}}</a> &rsaquo; 
+        <a href="{{changelist_url}}">{{opts.verbose_name_plural|capfirst}}</a> &rsaquo; 
         {% blocktrans with opts.verbose_name_plural|escape as name %}Recover deleted {{name}}{% endblocktrans %}
     </div>
 {% endblock %}
