Using a url resolver in object_history view.
git-svn-id: http://django-reversion.googlecode.com/svn/trunk@247 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/object_history.html
+++ b/src/reversion/templates/reversion/object_history.html
@@ -20,7 +20,7 @@
 			        <tbody>
 				        {% for action in action_list %}
 					        <tr>
-					            <th scope="row"><a href="./{{action.pk}}/">{{action.revision.date_created|date:_("DATETIME_FORMAT")}}</a></th>
+					            <th scope="row"><a href="{{action.url}}">{{action.revision.date_created|date:_("DATETIME_FORMAT")}}</a></th>
 					            <td>{{action.revision.user.username}}{% if action.revision.user.first_name %} ({{action.revision.user.first_name}} {{action.revision.user.last_name}}){% endif %}</td>
 					            <td>{{action.revision.comment|default:""}}</td>
 					        </tr>
