Added in a better hack for fixing the js18n relative URL.
git-svn-id: http://django-reversion.googlecode.com/svn/trunk@254 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/src/reversion/templates/reversion/revision_form.html
+++ b/src/reversion/templates/reversion/revision_form.html
@@ -1,12 +1,8 @@
 {% extends "admin/change_form.html" %}
-{% load i18n %}
+{% load i18n reversion_admin %}
 
 
-{% block extrahead %}
-    {{block.super.super}}
-    <script type="text/javascript" src="../../../../../jsi18n/"></script>
-    {{media}}
-{% endblock %}
+{% block extrahead %}{{block.super|fix_jsi18n}}{% endblock %}
 
 
 {% block breadcrumbs %}
